preset combo maxwidth

--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -384,50 +384,51 @@
                                                                                                                   ItemsSource="{Binding PresetNames}"
                                                                                                                   SelectedItem="{Binding SelectedPresetName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                                                                                   MinWidth="120"
+                                                                                                                  MaxWidth="250"
                                                                                                                   Visibility="{Binding Presets.Count, Converter={StaticResource CountToVisibilityConverter}}"
                                                                                                                   PlaceholderText="{local:Translate Presets_LoadPlaceholder}">
                                                                                                 
                                                                                             <local:FilterableComboBox.ItemTemplate>
                                                                                                 <DataTemplate>
                                                                                                     <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
+                                                                                                        <Grid.ColumnDefinitions>
+                                                                                                            <ColumnDefinition Width="*" />
+                                                                                                            <ColumnDefinition Width="Auto" />
+                                                                                                        </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Column="0" Text="{Binding}" 
-                       VerticalAlignment="Center" 
-                       TextTrimming="CharacterEllipsis" 
-                       Padding="5,3"/>
-            
-            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5,0">
-                <StackPanel.Style>
-                    <Style TargetType="StackPanel">
-                        <!-- Reserve space but hide the buttons by default -->
-                        <Setter Property="Visibility" Value="Hidden"/>
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=ListBoxItem}}" Value="True">
-                                <!-- Show buttons on hover -->
-                <Setter Property="Visibility" Value="Visible"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </StackPanel.Style>
+                                                                                                        <TextBlock Grid.Column="0" Text="{Binding}" 
+                                                                                                                   VerticalAlignment="Center" 
+                                                                                                                   TextTrimming="CharacterEllipsis" 
+                                                                                                                   Padding="5,3"/>
+                                                                                                        
+                                                                                                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5,0">
+                                                                                                            <StackPanel.Style>
+                                                                                                                <Style TargetType="StackPanel">
+                                                                                                                    <!-- Reserve space but hide the buttons by default -->
+                                                                                                                    <Setter Property="Visibility" Value="Hidden"/>
+                                                                                                                    <Style.Triggers>
+                                                                                                                        <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=ListBoxItem}}" Value="True">
+                                                                                                                            <!-- Show buttons on hover -->
+                                                                                                            <Setter Property="Visibility" Value="Visible"/>
+                                                                                                                        </DataTrigger>
+                                                                                                                    </Style.Triggers>
+                                                                                                                </Style>
+                                                                                                            </StackPanel.Style>
 
-                <Button Content="&#xE70F;"
-                        Command="{Binding DataContext.StartRenamePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
-                        CommandParameter="{Binding}"
-                        ToolTip="{local:Translate Presets_RenameTooltip}"
-                        Style="{StaticResource IconButton}"/>
-                
-                <!-- FIX: Use the correct icon character code for the delete button -->
-                <Button Content="&#xE74D;" 
-                        Command="{Binding DataContext.DeletePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
-                        CommandParameter="{Binding}"
-                        ToolTip="{local:Translate Presets_DeleteTooltip}"
-                        Style="{StaticResource IconButton}"/>
-            </StackPanel>
-        </Grid>
+                                                                                                            <Button Content="&#xE70F;"
+                                                                                                                    Command="{Binding DataContext.StartRenamePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
+                                                                                                                    CommandParameter="{Binding}"
+                                                                                                                    ToolTip="{local:Translate Presets_RenameTooltip}"
+                                                                                                                    Style="{StaticResource IconButton}"/>
+                                                                                                            
+                                                                                                            <!-- FIX: Use the correct icon character code for the delete button -->
+                                                                                                            <Button Content="&#xE74D;" 
+                                                                                                                    Command="{Binding DataContext.DeletePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
+                                                                                                                    CommandParameter="{Binding}"
+                                                                                                                    ToolTip="{local:Translate Presets_DeleteTooltip}"
+                                                                                                                    Style="{StaticResource IconButton}"/>
+                                                                                                        </StackPanel>
+                                                                                                    </Grid>
                                                                                                 </DataTemplate>
                                                                                             </local:FilterableComboBox.ItemTemplate>
 
