--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -269,7 +269,8 @@
                 <Border Grid.Column="0" Background="{StaticResource SecondaryBackground}" CornerRadius="0,0,0,5" Margin="5,0,0,5">
                     <ScrollViewer x:Name="ControlsScrollViewer" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled"
                                   Visibility="{Binding SelectedTab, Converter={StaticResource StringToIsNotNullOrEmptyConverter}}"
-                                  PreviewMouseWheel="ControlsScrollViewer_PreviewMouseWheel">
+                                  PreviewMouseWheel="ControlsScrollViewer_PreviewMouseWheel"
+                                  Button.Click="WorkflowField_ButtonClick">
                         <StackPanel>
                             <StackPanel.Resources>
                                 <DataTemplate DataType="{x:Type local:GlobalSettingsViewModel}">
