--- a/Comfizen/Views/WildcardBrowser.xaml
+++ b/Comfizen/Views/WildcardBrowser.xaml
@@ -21,6 +21,15 @@
                             Background="{StaticResource SecondaryBackground}" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="1"/>
                 </StackPanel>
                 
+                <!-- NEW: Toolbar for utilities -->
+                <Border DockPanel.Dock="Top" BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="0,0,0,1" Margin="0,0,0,10" Padding="0,0,0,5">
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="&#xE72C;" Style="{StaticResource IconButton}" Command="{Binding ReloadListCommand}" ToolTip="Refresh List"/>
+                        <Button Content="&#xE8DE;" Style="{StaticResource IconButton}" Command="{Binding ConvertWildcardsToYamlCommand}" Margin="10,0,0,0" ToolTip="Pack wildcards to YAML"/>
+                        <Button Content="&#xE8B3;" Style="{StaticResource IconButton}" Command="{Binding ConvertYamlToWildcardsCommand}" Margin="5,0,0,0" ToolTip="Unpack wildcards from YAML"/>
+                    </StackPanel>
+                </Border>
+                
                 <TextBox x:Name="SearchTextBox" DockPanel.Dock="Top" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"/>
                 
                 <ListBox ItemsSource="{Binding FilteredWildcards}" SelectedItem="{Binding SelectedWildcard}"
