--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -390,6 +390,7 @@
                                                                                             <RowDefinition Height="Auto"/>
                                                                                             <RowDefinition Height="Auto"/>
                                                                                             <RowDefinition Height="Auto"/>
+                                                                                            <RowDefinition Height="Auto"/>
                                                                                         </Grid.RowDefinitions>
 
                                                                                         <Grid Grid.Row="0">
@@ -584,6 +585,21 @@
                                                                                             </StackPanel.Style>
                                                                                             <TextBlock Text="Max Lines:" VerticalAlignment="Center" Margin="0,0,5,0"/>
                                                                                             <xctk:IntegerUpDown Value="{Binding MaxDisplayLines, UpdateSourceTrigger=PropertyChanged}" Minimum="1" Width="60"/>
+                                                                                        </StackPanel>
+                                                                                        
+                                                                                        <StackPanel Grid.Row="3" Margin="0,5,0,0">
+                                                                                            <StackPanel.Style>
+                                                                                                <Style TargetType="StackPanel">
+                                                                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                                                                    <Style.Triggers>
+                                                                                                        <DataTrigger Binding="{Binding Type}" Value="WildcardSupportPrompt">
+                                                                                                            <Setter Property="Visibility" Value="Visible"/>
+                                                                                                        </DataTrigger>
+                                                                                                    </Style.Triggers>
+                                                                                                </Style>
+                                                                                            </StackPanel.Style>
+                                                                                            <CheckBox Content="{local:Translate UIConstructor_Field_AdvancedPrompt}"
+                                                                                                IsChecked="{Binding AdvancedPrompt, Mode=TwoWay}"/>
                                                                                         </StackPanel>
                                                                                     </Grid>
                                                                                 </Grid>
